# dioxus-makepad-prototype

./: Cargo.toml  LICENSE  README.md
example/: Cargo.toml
example/src/: main.rs
src/: lib.rs  virtual_dom.rs
src/makepad/: app.rs
src/makepad_app/: mod.rs
