[package]
name = "dioxus-makepad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.4" }
# dioxus-native-core = { git = "https://github.com/DioxusLabs/dioxus/", features = ["dioxus"] }
dioxus-html = { git = "https://github.com/DioxusLabs/dioxus/" }
# makepad-widgets = { path = "../makepad/widgets", version = "0.6" }
makepad-widgets = { git = "https://github.com/jmbejar/makepad", branch = "makepad-dioxus-experiment" }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
