[package]
name = "dioxus-makepad-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { path = "../../dioxus/packages/dioxus", version = "0.4" }
dioxus-makepad = { path = "../", version = "0.1.0" }
